# precise-rs

./: Cargo.toml  README.md  hey-mycroft.pb  jarvis_S_B.tflite  model.onnx
src/: lib.rs
src/benches/: precise_bench.rs  precise_benches.rs
