[package]
name = "tract-precise"
version = "0.1.0"
authors = ["sheosi <sertorbe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tract-tensorflow = "^0.13"
tract-core = "^0.13"
thiserror = "^1.0"
serde_json = "^1.0"
serde = "^1.0"
mfcc = {git="https://github.com/syntacticsugarglider/mfcc"}

[dev-dependencies]
hound = "^3.4"