[package]
name = "precise-rs"
version = "0.1.0"
authors = ["sheosi <sertorbe@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Reimplementation of the precise hotword engine on Tract"
homepage = "https://github.com/sheosi/tract-precise"
repository = "https://github.com/sheosi/tract-precise"
keywords = ["hotword", "precise", "mycroft", "wake", "tract"]
categories = ["multimedia::audio"]
exclude = ["hey-mycroft.pb", "hey-mycroft.pb.params", "test.wav"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tflite="^0.9"
ndarray = "^0.15"
thiserror = "^1.0"
serde_json = "^1.0"
serde = {version="^1.0", features=["derive"]}
mfcc = {git="https://github.com/syntacticsugarglider/mfcc"}

[dev-dependencies]
hound = "^3.4"
criterion = "0.3"

[[bench]]
name = "precise_benches"
path = "benches/precise_bench.rs"
harness = false