[package]
name = "precise-rs"
version = "0.1.0"
authors = ["sheosi <sertorbe@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Reimplementation of the precise hotword engine on Tract"
homepage = "https://github.com/sheosi/tract-precise"
repository = "https://github.com/sheosi/tract-precise"
keywords = ["hotword", "precise", "mycroft", "wake", "tract"]
categories = ["multimedia::audio"]
exclude = ["hey-mycroft.pb", "hey-mycroft.pb.params", "test.wav"]

[dependencies]
tflite= {git = "https://github.com/boncheolgu/tflite-rs"}
ndarray = "^0.15"
thiserror = "^1.0"
serde_json = "^1.0"
serde = {version="^1.0", features=["derive"]}
#mfcc = {git="https://github.com/sheosi/mfcc"}
#mfcc = {path="../mfcc", default-features=false, features=["fftextern"]}
#mfcc = {path="../mfcc"}
mfcc-2 = {git="https://github.com/secretsauceai/mfcc-rust", optional = true}

[dev-dependencies]
hound = "^3.4"
criterion = "0.3"
assert_approx_eq = "^1.0"

[[bench]]
name = "precise_benches"
path = "src/benches/precise_bench.rs"
harness = false

[features]
default = ["new-mfcc"]
new-mfcc = ["mfcc-2"]